# quickstart

./: .env.example  .gitignore  README.md  docker-compose.yml  fixenv.sh  package.json  run_backend.sh  run_frontend.sh
backend/python/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  start.sh
frontend/: .env.local  package-lock.json  package.json
frontend/components/: Card.tsx  CreateUserVital.tsx  LinkButton.tsx
frontend/components/dashboard/: ActivityGraph.tsx  ActivityPanel.tsx  DetailedLineGraph.tsx  HorizontalBarChart.tsx  InfoIcon.tsx  LineGraph.tsx  SleepGraph.tsx  SleepPanel.tsx  WorkoutPanel.tsx
frontend/lib/: client.tsx  utils.tsx
frontend/models/: index.tsx
frontend/pages/: index.tsx
frontend/vital-frontend-quickstart/: package.json
frontend/vital-frontend-quickstart/components/: Card.tsx  CreateUserVital.tsx  LinkButton.tsx
frontend/vital-frontend-quickstart/components/dashboard/: ActivityPanel.tsx  HorizontalBarChart.tsx  SleepPanel.tsx  VitalLogo.tsx  customRadio.tsx
frontend/vital-frontend-quickstart/lib/: client.tsx  utils.tsx
frontend/vital-frontend-quickstart/pages/: index.tsx
